--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/chenpx976/isaac#readme",
   "devDependencies": {
+    "gh-pages": "^1.0.0",
     "gulp": "^3.9.1",
     "gulp-gh-pages": "^0.5.4"
   }
